refactor: fix a real reopen-row bug and clean up IDE inspection findings
Ran IntelliJ's inspections across every source file and fixed what was
real: ButtonHandler.updateEmbed always re-rendered the active-ticket
button row even for a closed ticket, so "Reopen" never actually
appeared once a ticket was closed - it now picks reopenRow() for
CLOSED/ARCHIVED tickets and re-includes the action-button rows
otherwise, instead of dropping them on every claim/close/priority
update. ConfigManager now rejects a category entry that isn't a
mapping with a clear error instead of NPEing deeper in
CategoryConfig.fromSection. InternalActionRegistry's frozenPlayers
field was dead - the constructor parameter of the same name was what
every lambda actually captured, so the field was removed rather than
wiring it up to be read. handlePing now uses the on-escalate message
template (it has an %id% placeholder for exactly this) instead of
silently ignoring the ticketId parameter and repeating the on-create
text. The rest is inert cleanup: an unused import, redundant casts and
type witnesses left over from writing against sealed-interface target
types, two near-identical SQLite lookup methods merged into one
parameterized helper, and a few List.get(0) calls swapped for
getFirst().